@startuml
class LightSwitch{
    - State * state;
    + LightSwitch()
    + void set_state(State * state)
    + void On(){state->on(this);}
    + void Off(){state->off(this);}
}
class State{
    + void on(LightSwitch *ls);
    + void off(LightSwitch *ls);
}
class OnState{
    + void on(OnState *);
    + void off(OnState *) override;
}
class OffState{
    + void on(OnState *) override;
    + void off(OffState *);
}
LightSwitch::state--|>State:成员变量表明状态
State--|>OnState:On的状态行为
State--|>OffState:Off的状态行为

@enduml